--- a/prometheus-operator/values.yaml
+++ b/prometheus-operator/values.yaml
@@ -740,8 +740,8 @@ kubeEtcd:
   service:
     port: 2379
     targetPort: 2379
-    # selector:
-    #   component: etcd
+    selector:
+      component: etcd
 
   ## Configure secure access to the etcd cluster by loading a secret into prometheus and
   ## specifying security configuration below. For example, with a secret named etcd-client-cert
@@ -764,6 +764,12 @@ kubeEtcd:
     caFile: ""
     certFile: ""
     keyFile: ""
+  # serviceMonitor:
+  #   scheme: https
+  #   insecureSkipVerify: true    
+  #   caFile: "/etc/prometheus/secrets/etcd-client/etcd-ca.crt"
+  #   certFile: "/etc/prometheus/secrets/etcd-client/etcdctl.crt"
+  #   keyFile: "/etc/prometheus/secrets/etcd-client/etcdctl.key"
 
     ## 	metric relabel configs to apply to samples before ingestion.
     ##
@@ -800,8 +806,8 @@ kubeScheduler:
   service:
     port: 10251
     targetPort: 10251
-    # selector:
-    #   component: kube-scheduler
+    selector:
+      component: kube-scheduler
 
   serviceMonitor:
     ## Scrape interval. If not set, the Prometheus default scrape interval is used.
@@ -851,8 +857,8 @@ kubeProxy:
   service:
     port: 10249
     targetPort: 10249
-    # selector:
-    #   k8s-app: kube-proxy
+    selector:
+      k8s-app: kube-proxy
 
   serviceMonitor:
     ## Scrape interval. If not set, the Prometheus default scrape interval is used.
@@ -1052,7 +1058,7 @@ prometheusOperator:
 
   ## Deploy CRDs used by Prometheus Operator.
   ##
-  createCustomResource: true
+  createCustomResource: false
 
   ## Attempt to clean up CRDs created by Prometheus Operator.
   ##
@@ -1481,7 +1487,7 @@ prometheus:
     ## prometheus resource to be created with selectors based on values in the helm deployment,
     ## which will also match the servicemonitors created
     ##
-    serviceMonitorSelectorNilUsesHelmValues: true
+    serviceMonitorSelectorNilUsesHelmValues: false
 
     ## ServiceMonitors to be selected for target discovery.
     ## If {}, select all ServiceMonitors
