--- a/elasticsearch_back/Chart.yaml
+++ b/elasticsearch_back/Chart.yaml
@@ -1,4 +1,5 @@
-appVersion: 6.6.2
+apiVersion: v1
+appVersion: 6.8.2
 description: Flexible and powerful open source, distributed real-time search and analytics
   engine.
 home: https://www.elastic.co/products/elasticsearch
@@ -12,6 +13,10 @@ maintainers:
   name: rendhalver
 - email: cedric@desaintmartin.fr
   name: desaintmartin
+- email: goonohc@gmail.com
+  name: KongZ
+- email: hfernandez@mesosphere.com
+  name: hectorj2f
 name: elasticsearch
 sources:
 - https://www.elastic.co/products/elasticsearch
@@ -20,4 +25,4 @@ sources:
 - https://github.com/GoogleCloudPlatform/elasticsearch-docker
 - https://github.com/clockworksoul/helm-elasticsearch
 - https://github.com/pires/kubernetes-elasticsearch-cluster
-version: 1.21.3
+version: 1.32.1
