--- a/elasticsearch_back/templates/job.yaml
+++ b/elasticsearch_back/templates/job.yaml
@@ -7,6 +7,7 @@ metadata:
     app: {{ template "elasticsearch.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
   annotations:
     "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-weight": "10"
@@ -19,6 +20,7 @@ spec:
         app: {{ template "elasticsearch.name" . }}
         chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
         release: {{ .Release.Name }}
+        heritage: {{ .Release.Service }}
     spec:
       containers:
       - name: bootstrap-elasticsearch
