--- a/elasticsearch_back/templates/role.yaml
+++ b/elasticsearch_back/templates/role.yaml
@@ -7,6 +7,7 @@ metadata:
     app: {{ template "elasticsearch.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 rules:
 - apiGroups: ['extensions']
   resources: ['podsecuritypolicies']
