Added service monitor for es

--- a/elasticsearch/templates/deployment.yaml
+++ b/elasticsearch/templates/deployment.yaml
@@ -1,13 +1,19 @@
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     app: {{ template "elasticsearch.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     component: "{{ .Values.esNode.name }}"
+    heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "elasticsearch.esNode.fullname" . }}
 spec:
+  selector:
+    matchLabels:
+      app: {{ template "elasticsearch.name" . }}
+      component: "{{ .Values.esNode.name }}"
+      release: {{ .Release.Name }}
   replicas: 1
   template:
     metadata:
