--- a/redis/redis-cluster/dev-values.yaml
+++ b/redis/redis-cluster/dev-values.yaml
@@ -4,12 +4,12 @@
 numberOfMaster: 3
 replicationFactor: 1
 # Override the default service name
-serviceName: 
+serviceName: redis-cluster
 serviceAccount:
-annotations:
+annotations: {}
   # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
-  prometheus.io/scrape: "true"
+  # prometheus.io/scrape: "true"
 image:
   repository: redisoperator/redisnode
   tag: master
